# sovereign-mcp

./: Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: check.yaml  check_arm.yaml  docker_publish.yaml
assets/docs/: docker-docker-compose-ctl.md
scripts/: healthcheck.py
src/core/: __init__.py  app.py  globals.py  logger.py  main.py  pyproject.toml
src/core/routers/: router_base.py
src/core/servers/: finance.py
src/core/workers/: w_abstract.py
src/mcp/: lifecycle_manager.py  pyproject.toml  router.py  server.py  session.py
src/mcp/schemas/: common.py  completion.py  logging.py  other.py  progress.py  prompts.py  resources.py  tools.py
