[project]
name = "tmp_python_service"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
core = [
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "scalar-fastapi>=1.4.4",
    "termcolor>=3.2.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "tmp_python_service[core]",
    "ruff>=0.14.6",
    "pytest>=9.0.1",
    "pyright>=1.1.407",
]

[tool.uv.workspace]
members = [
    "src/core",
]

[tool.uv.sources]
core = { workspace = true }

[tool.uv]
package = true

[project.scripts]
serve = "core.main:main"

[tool.pytest.ini_options]
markers = []
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
asyncio_mode = "auto"
