[project]
name = "personal_mcps"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
core = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.4",
    "termcolor>=3.2.0",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "personal_mcps[core]",
    "pytest>=9.0.2",
    "ty>=0.0.10",
]

[tool.uv.workspace]
members = [
    "src/core",
    "src/mcp",
]

[tool.uv.sources]
core = { workspace = true }
mcp = { workspace = true }

[tool.uv]
package = true

[project.scripts]
serve = "core.main:main"

[tool.pytest.ini_options]
markers = []
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
asyncio_mode = "auto"
