[project]
name = "sovereign-mcp"
version = "0.2.0"
description = "Strict, zero-magic implementation of Model Context Protocol (StreamableHTTP + JSON-RPC)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp"]
